--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -65,6 +65,8 @@
     <Compile Include="Assets\Scripts\Obstacles\Obstacle.cs" />
     <Compile Include="Assets\Scripts\Obstacles\ObstaclePool.cs" />
     <Compile Include="Assets\Scripts\Obstacles\ObstaclesBehaviour.cs" />
+    <Compile Include="Assets\Scripts\ObstacleSpawn.cs" />
+    <Compile Include="Assets\Scripts\Player\CharacterScriptableObj.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerCollision.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerController.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerStats.cs" />
